# resume-builder

./: .gitignore  README.md  progress.md  pyproject.toml  requirements.txt
docs/: architecture.md  ats.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md
src/: main.py
src/api/: routes.py
src/core/: config.py  gemini_client.py
src/models/: ats.py  common.py  github.py  jd.py  resume.py  tailored_resume.py
src/services/: embeddings.py  latex_resume.py  orchestrator.py
src/services/agents/: ats_scorer.py  company_research.py  github_analyzer.py  jd_parser.py  resume_optimizer.py  resume_parser.py
src/services/prompts/: ats_scorer.py  company_research.py  github_analyzer.py  jd_parser.py  resume_optimizer.py  resume_parser.py
src/services/templates/: resume.tex.j2
src/utils/: __init__.py  decorators.py  safe.py
ui/: app.py
