[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resume-agent"
version = "1.0.0"
description = "AI-powered tailored resume builder with ATS optimization, GitHub analysis, and company research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.12"
keywords = ["resume", "ai", "ats", "optimization", "gemini", "job-search"]

dependencies = [
    # LLM & API
    "google-generativeai>=0.3.0",

    # Data Parsing & Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",

    # PDF Processing
    "pdfplumber==0.11.9",

    # GitHub Integration
    "PyGithub>=2.1.1",

    # Web Search (Serper)
    "requests>=2.31.0",

    # LaTeX & Template Rendering
    "Jinja2>=3.1.2",

    # UI Framework
    "streamlit>=1.30.0",

    # API Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "python-multipart>=0.0.6",

    # Async & Concurrency
    "aiohttp>=3.9.0",

    # Embeddings & Similarity
    "sentence-transformers>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",

    # Environment Variables
    "python-dotenv>=1.0.0",

    # Logging
    "loguru>=0.7.2",

    # Retry Logic
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/resume-agent"
Repository = "https://github.com/yourusername/resume-agent"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
